# tui-vfx-recipes

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  QUICKSTART.md  README.md  publish.sh
examples/: demo.rs
recipes/: _bottom_blinds_collapse.json  _center_expand.json  _default_toast.json  _diagonal_slide_permille.json  _edge_wipe_slide.json  _legacy_demo_g.json  _slide_in_bounce.json  ambient_banner.json  border_breathing_glow.json  border_danger_flash.json  border_gold_luxury.json  border_neon_chase.json  border_pulse_attention.json  border_racing_green.json  border_sweep_clockwise.json  border_sweep_counter.json  bottom_blinds_collapse.json  bsod_crash.json  btop_focused_row_demo.json  center_expand.json  circuit_trace.json  coin_get.json  custom_netflix_n_bars.json  custom_netflix_spectrum_bars.json  cyber_glitch.json  cyber_glitch_shift.json  cyber_transmission.json  cyber_transmission_glitch_lines.json  cyber_transmission_typewriter.json  data_radar.json  default_toast.json  departure_board.json  diagonal_slide_permille.json  digital_rain.json  dream_state.json  edge_accent.json  edge_wipe_slide.json  effect_parity_braille_by_word.json  effect_parity_braille_by_word_down.json  effect_parity_braille_wave_down.json  (+123 more)
recipes/debug_recipes/: baseline.json
recipes/easing/: BackIn.json  BackInOut.json  BackOut.json  Bezier.json  BounceIn.json  BounceInOut.json  BounceOut.json  CircIn.json  CircInOut.json  CircOut.json  CubicIn.json  CubicInOut.json  CubicOut.json  ElasticIn.json  ElasticInOut.json  ElasticOut.json  ExpoIn.json  ExpoInOut.json  ExpoOut.json  Linear.json  QuadIn.json  QuadInOut.json  QuadOut.json  SineIn.json  SineInOut.json  SineOut.json  ease_bezier_custom.json  ease_circular_modal.json  ease_expo_snappy.json
recipes/examples/: marquee_oscillating_speed.json  scramble_dynamic_pace.json  typewriter_gaussian_variance.json  typewriter_perlin_variance.json
recipes/experimental/: block_border_demo.json  braille_border_demo.json  chamfered_corners_demo.json  gallery_frame_demo.json  hexagon_shape_demo.json  matte_shadow_demo.json  speech_bubble_demo.json
recipes/haiku_recipes1/: action_required.json  aurora_cascade.json  breath_gentle.json  connection_sync.json  dismissible_notice.json  error_alert.json  gentle_nudge.json  info_tooltip.json  integrity_check.json  matrix_glitch.json  progress_pulse.json  quantum_portal.json  retro_arcade.json  stacked_compact.json  success_pop.json  system_status.json  update_available.json  warning_caution.json  whimsical_bounce.json
recipes/midcentury-modern/: connected.json  deploy.json  disconnected.json  error.json  git_conflict.json  git_pull.json  git_push.json  info.json  reminder.json  success.json  tests_failed.json  tests_passed.json  warning.json
recipes/modern_design/: ambient_breathing.json  button_press_depth.json  contact_darkening.json  dual_tone_half_block.json  gloss_highlight_sweep.json  glow_ring_focus.json  half_cell_progress.json  material_card.json  micro_nudge_attention.json  partial_block_showcase.json  skeleton_shimmer.json  soft_shadow_panel.json  surface_elevation.json
recipes/scandi-edge/: connected.json  deploy.json  disconnected.json  error.json  git_conflict.json  git_pull.json  git_push.json  info.json  reminder.json  success.json  tests_failed.json  tests_passed.json  warning.json
recipes/scandi-inspired/: connected.json  deploy.json  disconnected.json  error.json  git_conflict.json  git_pull.json  git_push.json  info.json  reminder.json  success.json  tests_failed.json  tests_passed.json  warning.json
recipes/sonnet_recipes1/: ambient_whisper.json  completion_snap.json  context_bloom.json  crystalline_formation.json  digital_rainfall.json  electromagnetic_pulse.json  elegance_drift.json  elegance_drift_smooth.json  focus_anchor.json  gravity_well.json  neural_spark.json  ocean_depths.json  priority_stack.json  prism_refraction.json  progress_heartbeat.json  quantum_dissolve.json  sonic_boom.json  spectral_haunting.json  temporal_rift.json  thermal_vision.json  validation_slide.json
recipes/wargames/: dialogue_01_greetings_falken.json  dialogue_02_feeling_today.json  dialogue_03_side_selection.json  dialogue_04_first_strike.json  dialogue_05_identity_confusion.json  dialogue_06_still_playing.json  enhanced_games_list.json  enhanced_launch_sequence.json  enhanced_system_status.json  enhanced_target_data.json  launch_01_missiles_targeted.json  launch_02_changes_locked.json  map_01_world_outline.json  map_02_usa_soviet.json  map_03_north_america.json  map_04_missile_trajectory_01.json  map_05_missile_trajectory_02.json  map_06_impact_zones.json  map_07_explosion_flash.json  new_postlogon_human_input.json  new_postlogon_intro.json  new_rapid_flip_1.json  (+34 more)
src/: compat.rs  interactions.rs  lib.rs  prelude.rs
tools/pipeline-validator/: Cargo.toml
tools/pipeline-validator/rules/: visibility.toml
tools/pipeline-validator/src/: cli.rs  lib.rs  main.rs
tools/pipeline-validator/src/rules/: fnc_load_rules.rs  mod.rs
tools/pipeline-validator/src/rules/functions/: fnc_color_utils.rs  fnc_compare_values.rs  fnc_evaluate_condition.rs  fnc_evaluate_field.rs  fnc_evaluate_function.rs  fnc_evaluate_value.rs  fnc_get_json_field.rs  fnc_interpolate_message.rs  fnc_split_on_operator.rs  mod.rs
tools/pipeline-validator/src/stages/: mod.rs  parse.rs  rules.rs
tools/pipeline-validator/src/stages/functions/: fnc_benchmark_stages.rs  fnc_count_buffer_cells.rs  fnc_sample_buffer_cells.rs  fnc_validate_output.rs  fnc_validate_profile.rs  fnc_validate_render.rs  fnc_validate_shader.rs  fnc_validate_stages.rs  mod.rs
tools/pipeline-validator/src/types/: cls_eval_context.rs  cls_rule.rs  cls_rule_set.rs  cls_rule_violation.rs  cls_severity.rs  cls_value_type.rs  mod.rs
tools/pipeline-validator/tests/: test_fnc_count_buffer_cells.rs  test_fnc_sample_buffer_cells.rs  test_fnc_validate_output.rs  test_fnc_validate_profile.rs  test_fnc_validate_render.rs  test_fnc_validate_shader.rs  test_rules.rs
tools/recipe-validator/: Cargo.toml  README.md
tools/recipe-validator/src/: main.rs
(+183 files in other folders)
