# <FILE>Cargo.toml</FILE> - <DESC>Workspace manifest for tui-vfx-recipes</DESC>
# <VERS>VERSION: 0.2.0</VERS>
# <WCTX>Prepare tui-vfx-recipes for crates.io publication</WCTX>
# <CLOG>Add version = "0.2.0" to tui-vfx-* dependencies for crates.io publish</CLOG>

[workspace]
resolver = "3"
members = [
    ".",
    "tools/recipe-validator",
    "tools/pipeline-validator",
]

[package]
name = "tui-vfx-recipes"
version = "0.2.1"
edition = "2024"
rust-version = "1.86.0"
authors = ["5ocworkshop"]
license = "MIT"
repository = "https://github.com/5ocworkshop/tui-vfx-recipes"
readme = "README.md"
description = "JSON recipe loading and validation for tui-vfx"
keywords = ["tui", "terminal", "effects", "recipes", "animation"]
categories = ["command-line-interface", "config"]
exclude = ["tools/", "recipes/debug_recipes/", "Justfile", ".claude/"]

[dependencies]
# TUI VFX library
tui-vfx = "0.2"
tui-vfx-types = "0.2"
tui-vfx-core = "0.2"
tui-vfx-compositor = "0.2"
tui-vfx-style = "0.2"
tui-vfx-geometry = "0.2"
tui-vfx-content = "0.2"

# UI framework
ratatui = "0.30"

# Signal generators
mixed-signals = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Async runtime (optional, for async recipe loading)
tokio = { version = "1", features = ["fs", "rt"], optional = true }

[features]
default = []
async = ["dep:tokio"]

[dev-dependencies]
fast-fs = "0.2"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "demo"
required-features = []

# Temporary local path overrides for validating tui-vfx 0.2.5 (CharsetNoise)
# Remove these before publishing — they override the crates.io deps with local checkouts
[patch.crates-io]
tui-vfx = { path = "/usr/projects/tui-vfx/crates/tui-vfx" }
tui-vfx-types = { path = "/usr/projects/tui-vfx/crates/tui-vfx-types" }
tui-vfx-core = { path = "/usr/projects/tui-vfx/crates/tui-vfx-core" }
tui-vfx-core-macros = { path = "/usr/projects/tui-vfx/crates/tui-vfx-core-macros" }
tui-vfx-compositor = { path = "/usr/projects/tui-vfx/crates/tui-vfx-compositor" }
tui-vfx-style = { path = "/usr/projects/tui-vfx/crates/tui-vfx-style" }
tui-vfx-geometry = { path = "/usr/projects/tui-vfx/crates/tui-vfx-geometry" }
tui-vfx-content = { path = "/usr/projects/tui-vfx/crates/tui-vfx-content" }
tui-vfx-shadow = { path = "/usr/projects/tui-vfx/crates/tui-vfx-shadow" }

# <FILE>Cargo.toml</FILE> - <DESC>Workspace manifest for tui-vfx-recipes</DESC>
# <VERS>END OF VERSION: 0.2.0</VERS>
